syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "inventory-service/pb";

service InventoryService {
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  bool success = 1;
}

message CheckStockRequest {
  string product_id = 1;
}

message CheckStockResponse {
  string product_id = 1;
  int32 quantity = 2;
  google.protobuf.Timestamp last_updated = 3;
}
